# GL-Transformation-and-Rasterization-Pipeline

./: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  25.txt  26.txt  27.txt  CMakeLists.txt  Makefile  OpenGL_Test  grading-helper.pl  grading-scheme.txt  grading-script.sh  main.cpp  minigl.cpp  minigl.h  minigl.h.backup.h  readme.md  resume.vim
grading/: actual_include.txt  dump_png.cpp  main.cpp  mat.h  mglRgbColor.cpp  mglRgbColor.h  minigl.cpp  minigl.h  parse.cpp
